# python-demoapp

./: pyproject.toml
src/: requirements.txt  run.py
