[project]
name = "python-demoapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==20.8b1",
    "flake8==3.9.0",
    "flask>=2.3.0",
    "gunicorn==20.1.0",
    "psutil==5.8.0",
    "py-cpuinfo==7.0.0",
    "pytest==6.2.2",
]
